<resources>
    <string name="app_name">Stem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="apply_loan_icon">&#xf058;</string>
    <string name="loan_balance_icon">&#xf09d;</string>
    <string name="due_date_icon">&#xf073;</string>
    <string name="loan_history_icon">&#xf1da;</string>
    <string name="user_profile_icon">&#xf007;</string>
    <string name="settings_icon">&#xf085;</string>
    <string name="about_icon">&#xf05a;</string>

    <string name="simple_timely_easy_money">Simple.Timely.Easy.Money</string>
    <string name="int_email">intelligencecrew@gmail.com</string>

    <string name="fname_error">Firstname cannot be empty</string>
    <string name="pin_error">Pin must be 4 numbers</string>
    <string name="lname_error">Lastname cannot be empty</string>
    <string name="email_error">Enter a valid email</string>
    <string name="national_id_error">National ID cannot be empty</string>
    <string name="phone_error">Invalid phone number format</string>
    <string name="phone_empty_error">Phone number cannot be blank</string>
    <string name="confirm_pin_error">Pins do not match</string>
    <string name="welcome_user_a">Welcome User</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="automatically_log_me_in">Log me in</string>
    <string name="create_account">Create Account</string>
    <string name="pin">Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="phone_number">Phone Number</string>
    <string name="national_id">National ID</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="slogan">Simple.Timely.Easy.Money</string>
    <string name="user">Username</string>
    <string name="id_no">id_no</string>
    <string name="phone_no">phone_no</string>
    <string name="email_address">email_address</string>
    <string name="messages">messages</string>
    <string name="redeem_points">Redeem Points</string>
    <string name="_dashboard">Dashboard</string>

    <!-- Activity Titles -->
    <string name="title_activity_loan_application">LoanApplicationActivity</string>
    <string name="title_loan_application">Loan Application</string>
    <string name="title_loan_payment">Loan Payment</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">My Profile</string>
    <string name="title_login">Log In</string>
    <string name="title_signup">Sign Up</string>

    <string name="tab_loan_application">Application</string>
    <string name="tab_loan_payment">Payment</string>
    <string name="tab_loan_history">History</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="apply_for_a_loan">Apply for a loan</string>
    <string name="repay_loan">Loan repayment</string>
    <string name="create_a_new_pin">Create a new PIN</string>
    <string name="edt_enter_pin">Enter PIN</string>
    <string name="save_pin">Save PIN</string>
    <string name="cancel">Cancel</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="pin_must_only_contain">PIN must only contain 4 numbers</string>
    <string name="btn_PIN_enter">Enter</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="signup">Sign Up</string>
    <string name="create_pin">Create new PIN</string>

    <string name="history_rating">Rating</string>
    <string name="history_date">6th April 2018</string>
    <string name="history_late_payment_status">Late Payment</string>
    <string name="history_card_loan_amount">Loan Amount:</string>
    <string name="history_loan_lend_date">Lend Date:</string>
    <string name="history_loan_repay_date">Repayment Date:</string>
    <string name="history_account_name">Account:</string>
    <string name="history_points">Points:</string>
    <string name="to">To:</string>
    <string name="contact_us">Contact Us</string>
    <string name="subject">Subject:</string>
    <string name="team_email">intelligencecrew@gmail.com</string>
    <string name="email_subject">RE: STEM-APP Feedback|Enquiry|Issues</string>
    <string name="contact_message">Message:</string>
    <string name="enter_message_here">Enter message here...</string>
    <string name="btn_send">send</string>
    <string name="ksh_0">0</string>
    <string name="total">TOTAL</string>
    <string name="fourth">Fourth</string>
    <string name="third">Third</string>
    <string name="second">Second</string>
    <string name="first">First</string>
    <string name="due_date">Due Date</string>
    <string name="payment">Payment</string>
    <string name="amount">Amount</string>
    <string name="title_activity_loan_repayment">Loan Repayment</string>
    <string name="about_us">About us</string>
    <string name="content_profile">Profile</string>
    <string name="content_history">History</string>
    <string name="current_loan_status">Current Loan Status:</string>
    <string name="apply_for_this_loan">Apply for this loan</string>
    <string name="invite">Hey there, I am using this awesome app to get easy loans. Try it out now! https://stemapp.com/dl</string>
    <string name="repayment_loan_balance">Loan Balance:</string>
    <string name="points">Points</string>
    <string name="active_loan">Active Loan</string>
    <string name="profile_balance">Balance</string>


</resources>
