<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/contact_edit_text_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/graylight"
            android:enabled="false"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:text="@string/team_email" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/contact_edit_text_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/graylight"
            android:enabled="false"
            android:inputType="textEmailSubject"
            android:padding="10dp"
            android:text="@string/email_subject" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/contact_edit_text_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/contact_message_bg"
            android:gravity="start|top"
            android:hint="@string/enter_message_here"
            android:lines="10"
            android:padding="10dp"
            android:textColor="@color/colorAccentDark" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dip"
            android:background="@drawable/buttonstyle"
            android:text="@string/btn_send"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>