<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:text="@string/create_a_new_pin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:text="@string/pin_must_only_contain"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/edt_create_pin"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/pin_bg"
            android:hint="@string/edt_enter_pin"
            android:maxLines="1"
            android:textAlignment="center" />


        <Button
            android:id="@+id/btn_pin_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/save_pin"
            android:textColor="@android:color/white"
            android:textSize="16sp" />


    </LinearLayout>
</ScrollView>