<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PINActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/error_PIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/img"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/stem_logo" />

        <TextView
            android:id="@+id/tv_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_pin"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_pin"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/pin_bg"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn_pin_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle"
            android:text="@string/btn_PIN_enter"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/forgot_pin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>
</ScrollView>
